--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,11 @@
         android:backgroundTint="#1E88E5"
         android:layout_marginBottom="50dp"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Press me!"
+        android:backgroundTint="#1E88E5"
+        android:layout_marginBottom="50dp"/>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
